# procrastination_LLM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
prompts/: analyze_task.md  generate_report.md  generate_task_strategy.md  is_single_task.md  suggest_causes.md  suggest_descriptions.md
services/: procrastination.py
static/: index.html
