[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "click>=8.1.0",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "sniffio>=1.3.1",
    "starlette>=1.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.30.0",
    "websockets>=16.0",
]
